# Statistics

./: .gitignore  LICENSE  init.py  main.py  pyproject.toml
data/: loading.py
probability_distributions/continuous/: beta.py  chi2.py  f.py  norm.py  special_functions.py  t.py  uniform.py
probability_distributions/discrete/: binom.py  poisson.py
regression/: LinearRegression.py  dask_functions.py  fit_methods.py  link_functions.py  metrics.py  results.py
samples/: linear_regression_sample.csv
