[project]
name = "statistics"
version = "0.1.0"
description = "Python scripts to run common statistical functions based on native modules or wide spread ones used for Data Science."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[array,dataframe,distributed]>=2025.10.0",
    "ipykernel>=7.1.0",
    "scipy>=1.16.3",
]
